// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuList English returns array of menu list objects 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with absolute URLs 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.healthcare.gov/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"en\\"}",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with custom locale switch link 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es",
      "label": "header.español | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es",
      "label": "header.español | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"en\\"}",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with subpath 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/tax-tool/",
      "label": "header.español | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"en\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/tax-tool/",
      "label": "header.español | {\\"ns\\":\\"en\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"en\\"}",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"es\\"}",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with absolute URLs 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"es\\"}",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with custom locale switch link 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://localhelp.healthcare.gov",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://localhelp.healthcare.gov",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"es\\"}",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with subpath 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "https://www.healthcare.gov/tax-tool/",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"es\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/tax-tool/",
      "label": "header.english | {\\"ns\\":\\"es\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"es\\"}",
    },
  ],
}
`;

exports[`MenuList leaves out locale links if hideLanguageSwitch true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
}
`;

exports[`MenuList leaves out login link if hideLoginLink true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
}
`;

exports[`MenuList leaves out logout link if hideLogoutLink true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "header.myApplicationsAndCoverage | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "header.myProfile | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
}
`;

exports[`MenuList leaves out the myProfile and myApplicationsAndCoverage when customLinksPassedIn is true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "header.logout | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "header.español | {\\"ns\\":\\"healthcare\\"}",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "header.login | {\\"ns\\":\\"healthcare\\"}",
    },
  ],
}
`;
